# kokoro-onnx

./: .ruff.toml  chat_dialogue_system.py  dialogue.py  hello.py  optimized_known_dialogue_flow.py  pyproject.toml  requirements.txt  unknown_dialogue_updated.py
_chat_app_w_tts/: README.md  chat_dialogue_system.py  requirements.txt
_chat_app_w_tts/frontend/: index.html  styles.css
_documentation/: 01_system_overview.md  02_data_pipeline.md  03_chat_integration.md  04_performance_tuning.md  05_modification_guide.md
frontend/: chat.js  index.html
