[project]
name = "kokoro-onnx1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro-onnx[gpu]>=0.3.6",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "keyboard>=0.13.5",
    "pydantic>=2.5.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
]
